# lico_alone

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  Dockerfile.full  README.md  build_and_run.sh  build_binary.sh  config-test.toml  config.toml  enterpoint.sh  go.mod  go.sum  http_test.http  lico.sql  main.go  version
application/: application.go
autotest/: auto_test.go
common/: jwts.go  jwts_test.go
component/: dig.go
config/: config.go
control/: common.go  control.go  doc.go  login_auth_validate.go  login_auth_validate_struct.go  manager_client_user_new_acc_token.go  manager_permission_new_permission.go  manager_role_add_permission.go  manager_role_new_role.go  manager_user_add_role.go  router.go  user_auth_client_acc_token.go  user_auth_client_has_acc_token.go  user_auth_has_permission.go  user_auth_has_role.go  user_auth_permissions.go  user_auth_roles.go  user_base_info.go  user_base_login.go  user_base_logout.go  user_base_register.go  user_base_valid.go  user_base_valid_client_acc_token.go
docker/: .gitignore  Dockerfile  enterpoint.sh
docs/: docs.go  swagger.json  swagger.yaml
interface_user_auth/: login_interface.go
manager/: manager_app_user_new_keys.go  manager_client_user_new_acc_token.go  manager_permission_new_permission.go  manager_role_add_permission.go  manager_role_new_permission.go  manager_role_new_role.go  manager_sys_user_new_keys.go  (+2 more)
rlico/: Cargo.toml
rlico/src/: main.rs
rlico/src/dao/: dao.rs  dao_comment.rs  mod.rs
rlico/src/model/: mod.rs
rlico/src/util/: com_result.rs  config.rs  errors.rs  mod.rs
(+1182 files in other folders)
