[package]
name = "rlico"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
chrono = "0.4"
async-std = { version = "1.9.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "mysql"] }
serde_json = "1.0.64"
serde_derive = "1.0.126"
